Se agregan animaciones

--- a/index.html
+++ b/index.html
@@ -14,7 +14,11 @@
     <link rel="stylesheet" href="css/normalize.css">
     <!-- CSS -->
     <link rel="stylesheet" href="css/estilo.css">
-
+    <!-- ANIMACIONES -->
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+  />
 </head>
 
 <body>
@@ -59,14 +63,14 @@
     <!-- PORTADA PRINCIPAL -->
 
     <main>
-        <div class="text-center mb-1 p-0">
+        <div class="text-center mb-1 p-0 animate__animated animate__fadeInUp">
             <h1 class="tituloPrincipal">La Vera Pizza Napoletana</h1>
             <h2 class="mt-2 mb-4 col-lg-6 mx-auto">Comenzá a cocinar este plato que ya es patrimonio de la humanidad en tu
                 casa y
                 seguí nuestra pasión por la pizza estilo napolitano.</h2>
         </div>
 
-        <div class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel slide animate__animated animate__fadeInUp" data-bs-ride="carousel">
             <div class="carousel-inner mb-3">
                 <div class="carousel-item active">
                     <img src="imagenes/foto-portada-1.jpg" class="imgCarrusel img-fluid d-block w-100"
@@ -90,7 +94,7 @@
 
     <!-- FOOTER -->
 
-    <footer class="d-flex flex-column mt-0 pt-0">
+    <footer class="d-flex flex-column mt-0 pt-0 animate__animated animate__fadeInUp">
 
         <div class="contenedorSeguinos container-fluid pb-3 pt-2 d-flex flex-column justify-content-center">
 
