--- a/pages/masa.html
+++ b/pages/masa.html
@@ -14,6 +14,11 @@
     <link rel="stylesheet" href="../css/normalize.css">
     <!-- CSS -->
     <link rel="stylesheet" href="../css/estilo.css">
+    <!-- ANIMACIONES -->
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+  />
 
 </head>
 
@@ -52,12 +57,12 @@
     </header>
 
     <main>
-        <h1 class="container text-center">LA RECETA PERFECTA PARA TU PIZZA NAPOLITANA</h1>
+        <h1 class="container text-center animate__animated animate__fadeInUp">LA RECETA PERFECTA PARA TU PIZZA NAPOLITANA</h1>
     </main>
 <!-- SECCION MASA -->
     <section class="container mb-2">
                
-       <div class="row mt-2 p-0 m-0 container-fluid d-flex align-items-stretch">
+       <div class="row mt-2 p-0 m-0 container-fluid d-flex align-items-stretch animate__animated animate__fadeInUp">
 
             <div class="col-lg-6 col-sm-12 pt-2 m-0 pe-0 bg-secondary-subtle">
                 <h3>Masa</h3>
@@ -71,7 +76,7 @@
             </div>
         </div> 
 
-        <div class="row container-fluid m-0 p-0">
+        <div class="row container-fluid m-0 p-0 animate__animated animate__fadeInUp">
 
             <div class="col-lg-6 col-sm-12 m-0 p-0 container-fluid">
                 <img class="img-fluid" src="../imagenes/masa/ingredientes.jpeg"
