--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -15,6 +15,11 @@
     <link rel="stylesheet" href="../css/normalize.css">
     <!-- CSS -->
     <link rel="stylesheet" href="../css/estilo.css">
+    <!-- ANIMACIONES -->
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+  />
 
 </head>
 
@@ -53,14 +58,14 @@
     </header>
 
     <main>
-        <h1 class="container text-center">LA RECETA PERFECTA PARA TU PIZZA NAPOLITANA</h1>
+        <h1 class="container text-center animate__animated animate__fadeInUp">LA RECETA PERFECTA PARA TU PIZZA NAPOLITANA</h1>
     </main>
     <!-- SECCION CONTACTO -->
     <section class="container mb-2">
 
-        <h2 class="container text-center subtituloSeccion pt-2 pb-2">CONTACTO</h2>
+        <h2 class="container text-center subtituloSeccion pt-2 pb-2 animate__animated animate__fadeInUp">CONTACTO</h2>
 
-        <div class="row mt-2 p-0 m-0 container-fluid">
+        <div class="row mt-2 p-0 m-0 container-fluid animate__animated animate__fadeInUp">
 
             <div class="col-lg-6 col-sm-12 pt-2 ps-2 m-0 bg-secondary-subtle">
                 <h3>¡QUEREMOS MEJORAR!</h3>
@@ -98,7 +103,7 @@
 
     </section>
     <!-- FOOTER -->
-    <footer class="d-flex flex-column">
+    <footer class="d-flex flex-column animate__animated animate__fadeInUp">
 
         <div class="contenedorSeguinos container-fluid pb-3 pt-2 d-flex flex-column justify-content-center">
 
