Se agrega sticky al header

--- a/pages/masa.html
+++ b/pages/masa.html
@@ -23,7 +23,7 @@
 </head>
 
 <body>
-    <header>
+    <header class="sticky-top">
         <!-- BARRA DE NAVEGACION -->
         <nav class="container-fluid navbar navbar-expand-lg">
             <div class="container-fluid flex-row justify-content-around">
