--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 </head>
 
 <body>
-    <header>
+    <header class="sticky-top">
         <!-- BARRA DE NAVEGACION -->
         <nav class="container-fluid navbar navbar-expand-lg">
             <div class="container-fluid d-flex justify-content-evenly">
