Se modificó en parte el home y se seguirá trabajando en algunos arreglos

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="¡Bienvenido a Pizza Fan! Descubre el auténtico arte de la pizza estilo napolitano con nuestras recetas tradicionales y deliciosas. Aprende a crear tu propia pizza perfecta en casa con ingredientes de origen y técnicas auténticas. ¡Sumérgete en el mundo de la pizza con Pizza Fan y despierta tu pasión culinaria!">
+    <meta name="description"
+        content="¡Bienvenido a Pizza Fan! Descubre el auténtico arte de la pizza estilo napolitano con nuestras recetas tradicionales y deliciosas. Aprende a crear tu propia pizza perfecta en casa con ingredientes de origen y técnicas auténticas. ¡Sumérgete en el mundo de la pizza con Pizza Fan y despierta tu pasión culinaria!">
     <title>Pizza Fan! - La Receta Perfecta para tu Pizza Napolitana</title>
     <link rel="shortcut icon" href="imagenes/favicon.png" type="image/x-icon">
     <!-- BOOTSTRAP -->
@@ -15,10 +16,7 @@
     <!-- CSS -->
     <link rel="stylesheet" href="css/estilo.css">
     <!-- ANIMACIONES -->
-    <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
-  />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 </head>
 
 <body>
@@ -60,14 +58,15 @@
     <!-- PORTADA PRINCIPAL -->
 
     <main>
-        <div class="text-center mb-1 p-0 animate__animated animate__fadeInUp">
+        <div class="text-center mt-3 mb-2 p-0 animate__animated animate__fadeInUp">
             <h1 class="tituloPrincipal">La Vera Pizza Napoletana</h1>
-            <h2 class="mt-2 mb-4 col-lg-6 mx-auto">Comenzá a cocinar este plato que ya es patrimonio de la humanidad en tu
+            <h2 class="mt-2 mb-4 col-lg-6 mx-auto">Comenzá a cocinar este plato que ya es patrimonio de la humanidad en
+                tu
                 casa y
                 seguí nuestra pasión por la pizza estilo napolitano.</h2>
         </div>
 
-        <div class="carousel slide animate__animated animate__fadeInUp" data-bs-ride="carousel">
+        <div class="mt-5 mb-5 carousel slide animate__animated animate__fadeInUp" data-bs-ride="carousel">
             <div class="carousel-inner mb-3">
                 <div class="carousel-item active">
                     <img src="imagenes/foto-portada-1.jpg" class="imgCarrusel img-fluid d-block w-100"
@@ -86,6 +85,45 @@
         </div>
 
     </main>
+
+    <section>
+        <div class="container px-4 py-5">
+            <h2 class="pb-2 border-bottom text-center">¿Qué Aprenderas?</h2>
+            <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
+                <div class="feature col text-center">
+                    <img class="img-fluid p-3" src="imagenes/iconos/fermentacion.png" alt="fermentacion">
+                    <div class="feature-icon bg-primary bg-gradient m-2">
+                        <svg class="separadorInicio" width="1em" height="1em">
+                        </svg>
+                    </div>
+                    <h2 class="text-center">Masa con Fermentacion de 72 horas</h2>
+                    <p>Aprenderás a realizar un pre-fermento de origen italiano para que tu masa salga fragante, rica y
+                        que además sea super digestible para tu estómago.</p>
+                </div>
+                <div class="feature col">
+                    <div class="feature-icon bg-primary bg-gradient">
+                        <svg class="bi" width="1em" height="1em">
+                            <use xlink:href="#people-circle" />
+                        </svg>
+                    </div>
+                    <h2 class="text-center">Técnica de Estirado</h2>
+                    <p>Uno de los secretos de este estilo de pizza es su correcto estirado y aquí te mostraremos como se
+                        realiza correctamente para que esos bordes salgan bien aireados y llenos de sabor.</p>
+                </div>
+                <div class="feature col">
+                    <div class="feature-icon bg-primary bg-gradient">
+                        <svg class="bi" width="1em" height="1em">
+                            <use xlink:href="#toggles2" />
+                        </svg>
+                    </div>
+                    <h2 class="text-center">Receta Tradicional</h2>
+                    <p>Te enseñaremos a realizar la tradicional receta italiana de la pizza "Margarita" para que
+                        deleites el paladar de tus invitados.</p>
+
+                </div>
+            </div>
+        </div>
+    </section>
 
 
 
