--- a/pages/masa.html
+++ b/pages/masa.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Descubre el arte de la masa perfecta para pizza napolitana en Pizza Fan. Aprende técnicas esenciales, desde el fermento poolish hasta el amasado francés. Conoce los ingredientes clave, como la harina de fuerza, la levadura seca y la miel. Sigue nuestras detalladas instrucciones paso a paso para lograr masas suaves y aireadas. ¡Conviértete en un maestro pizzero y crea pizzas auténticas en casa!">
+    <meta name="description"
+        content="Descubre el arte de la masa perfecta para pizza napolitana en Pizza Fan. Aprende técnicas esenciales, desde el fermento poolish hasta el amasado francés. Conoce los ingredientes clave, como la harina de fuerza, la levadura seca y la miel. Sigue nuestras detalladas instrucciones paso a paso para lograr masas suaves y aireadas. ¡Conviértete en un maestro pizzero y crea pizzas auténticas en casa!">
     <title>Masa de Pizza Napolitana - Ingredientes y Procedimiento | Pizza Fan</title>
     <link rel="shortcut icon" href="../imagenes/favicon.png" type="image/x-icon">
     <!-- BOOTSTRAP -->
@@ -15,10 +16,7 @@
     <!-- CSS -->
     <link rel="stylesheet" href="../css/estilo.css">
     <!-- ANIMACIONES -->
-    <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
-  />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 
 </head>
 
@@ -27,8 +25,8 @@
         <!-- BARRA DE NAVEGACION -->
         <nav class="container-fluid navbar navbar-expand-lg">
             <div class="container-fluid flex-row justify-content-around">
-                <div class="d-flex flex-column text-center">   
-<!-- MENU HAMBURGESA MOBILE -->
+                <div class="d-flex flex-column text-center">
+                    <!-- MENU HAMBURGESA MOBILE -->
                     <label class="fuenteMenuIconoMobile navbar-toggler ps-2">MENÚ</label>
                     <button class="iconoMenuMobile navbar-toggler px-3" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
@@ -57,14 +55,17 @@
     </header>
 
     <main>
-        <h1 class="container text-center animate__animated animate__fadeInUp">LA RECETA PERFECTA PARA TU PIZZA NAPOLITANA</h1>
+        <h1 class="mb-5 text-center animate__animated animate__fadeInUp">LA RECETA PERFECTA PARA TU PIZZA
+            NAPOLITANA</h1>
     </main>
-<!-- SECCION MASA -->
+    <!-- SECCION MASA -->
     <section class="container mb-2">
-               
-       <div class="row mt-2 p-0 m-0 container-fluid d-flex align-items-stretch animate__animated animate__fadeInUp">
+        <h2 class="container text-center subtituloSeccion pt-2 pb-2 animate__animated animate__fadeInUp">¡HAGAMOS LA
+            MASA!</h2>
 
-            <div class="col-lg-6 col-sm-12 pt-2 m-0 pe-0 bg-secondary-subtle">
+        <div class="row mt-2 p-0 m-0 container-fluid d-flex align-items-stretch animate__animated animate__fadeInUp">
+
+            <div class="col-lg-6 col-sm-12 pt-2 m-0 p-3 bg-secondary-subtle">
                 <h3>Masa</h3>
                 <p>Al momento de preparar la masa para pizza napolitana es muy importante tener en claro que, si bien
                     los ingredientes son pocos, la exactitud en la técnica y la calidad de los mismos es <span
@@ -72,9 +73,10 @@
             </div>
 
             <div class="col-lg-6 col-sm-12 m-0 p-0 container-fluid d-flex align-items-stretch">
-                <img class="img-fluid object-fit-cover" src="../imagenes/masa/masa-1.jpg" alt="Mano amasando y estirando pizza">
+                <img class="img-fluid object-fit-cover" src="../imagenes/masa/masa-1.jpg"
+                    alt="Mano amasando y estirando pizza">
             </div>
-        </div> 
+        </div>
 
         <div class="row container-fluid m-0 p-0 animate__animated animate__fadeInUp">
 
@@ -83,7 +85,7 @@
                     alt="ingredientes vistos desde arriba para pizza">
             </div>
 
-            <div class="col-lg-6 col-sm-12 pt-3 bg-secondary-subtle container-fluid">
+            <div class="col-lg-6 col-sm-12 p-3 bg-secondary-subtle container-fluid">
                 <h3>Ingredientes</h3>
                 <p>A continuación detallamos los ingredientes que necesitaremos para realizar 5 PIZZAS de 340 gramos que
                     es el estandar recomendado y fácil de calcular:</p>
@@ -108,7 +110,7 @@
         <h2 class="container-fluid mt-2 mb-2 pt-2 pb-2 subtituloSeccion text-center">PROCEDIMIENTO</h2>
 
         <div class="row m-0 p-0 container-fluid">
-            <div class="col-lg-6 col-sm-12 pt-2 bg-secondary-subtle">
+            <div class="col-lg-6 col-sm-12 p-3 bg-secondary-subtle">
                 <h3>72 Horas Antes</h3>
                 <h4>Poolish</h4>
 
@@ -131,7 +133,7 @@
         </div>
 
         <div class="row m-0 p-0 container-fluid">
-            <div class="col-lg-6 col-sm-12 pt-2 m-0">
+            <div class="col-lg-6 col-sm-12 p-3 m-0">
                 <h3>48 Horas Antes</h3>
                 <h4>Amasado</h4>
 
@@ -173,7 +175,7 @@
         </div>
 
         <div class="row m-0 p-0 container-fluid">
-            <div class="col-lg-6 col-sm-12 bg-secondary-subtle p-2 m-0">
+            <div class="col-lg-6 col-sm-12 bg-secondary-subtle p-3 m-0">
                 <h3>¡Llego el Día!</h3>
                 <h4>Armado de Bollos</h4>
 
@@ -201,7 +203,7 @@
     </section>
 
 
-<!-- FOOTER -->
+    <!-- FOOTER -->
     <footer class="d-flex flex-column">
 
         <div class="contenedorSeguinos container-fluid pb-3 pt-2 d-flex flex-column justify-content-center">
@@ -209,8 +211,9 @@
             <p class="seguinos text-center mb-2">¡SEGUINOS!</p>
 
             <div class="text-center">
-                <a class="redes" target="_blank" href="https://api.whatsapp.com/send?phone=+5493515921209&text=Hola,%20v%C3%AD%20tu%20pagina%20de%20Pizza%20Fan!..."><img class="redSocial"
-                        src="../imagenes/bxl-whatsapp.svg" alt="boton whatsapp"></a>
+                <a class="redes" target="_blank"
+                    href="https://api.whatsapp.com/send?phone=+5493515921209&text=Hola,%20v%C3%AD%20tu%20pagina%20de%20Pizza%20Fan!..."><img
+                        class="redSocial" src="../imagenes/bxl-whatsapp.svg" alt="boton whatsapp"></a>
                 <a class="redes" target="_blank" href="https://www.instagram.com/"><img class="redSocial"
                         src="../imagenes/bxl-instagram.svg" alt="boton instagram"></a>
                 <a class="redes" target="_blank" href="https://www.facebook.com/"><img class="redSocial"
