--- a/pages/calculadora.html
+++ b/pages/calculadora.html
@@ -58,10 +58,12 @@
     </header>
 
     <main>
-        <h1 class="container text-center animate__animated animate__fadeInUp">LA RECETA PERFECTA PARA TU PIZZA NAPOLITANA</h1>
+        <h1 class="mb-5 text-center animate__animated animate__fadeInUp">LA RECETA PERFECTA PARA TU PIZZA NAPOLITANA</h1>
     </main>
     <!-- SECCION CALCULADORA -->
     <section class="container mb-2">
+
+        <h2 class="container text-center subtituloSeccion pt-2 pb-2 animate__animated animate__fadeInUp">CALCULADORA</h2>
 
         <div class="row mt-2 p-0 m-0 container-fluid animate__animated animate__fadeInUp">
             <div class="col-lg-6 col-sm-12 pt-2 ps-2 m-0 bg-secondary-subtle">
@@ -91,8 +93,8 @@
             </div>
 
             <div class="col-lg-6 col-sm-12 m-0 p-0 d-flex align-items-stretch">
-                <img class="img-fluid object-fit-cover" src="../imagenes/calculadora/calculadora-de-masa.jpg"
-                    alt="Calculadora y libreta de anotaciones">
+                <img class="img-fluid object-fit-cover w-100" src="../imagenes/calculadora/calculadora-de-masa.jpg"
+                    alt="Calculadora con resultado pizza">
             </div>
         </div>
 
