--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -58,7 +58,7 @@
     </header>
 
     <main>
-        <h1 class="container text-center animate__animated animate__fadeInUp">LA RECETA PERFECTA PARA TU PIZZA NAPOLITANA</h1>
+        <h1 class="mb-5 text-center animate__animated animate__fadeInUp">LA RECETA PERFECTA PARA TU PIZZA NAPOLITANA</h1>
     </main>
     <!-- SECCION CONTACTO -->
     <section class="container mb-2">
