--- a/pages/recetas.html
+++ b/pages/recetas.html
@@ -57,7 +57,7 @@
     </header>
 <!-- SECCION RECETAS -->
     <main>
-        <h1 class="container text-center animate__animated animate__fadeInUp">LA RECETA PERFECTA PARA TU PIZZA NAPOLITANA</h1>
+        <h1 class="mb-5 text-center animate__animated animate__fadeInUp">LA RECETA PERFECTA PARA TU PIZZA NAPOLITANA</h1>
     </main>
 
     <section class="container mb-2">
