--- a/pages/masa.html
+++ b/pages/masa.html
@@ -167,7 +167,7 @@
             <div class="col-lg-6 col-sm-12 pt-2 p-0 m-0">
                 <img class="img-fluid" src="../imagenes/masa/amasar-pan.jpg" alt="Mano amasando con fuerza">
                 <iframe class="ratio" width="560" height="315" src="https://www.youtube.com/embed/uen6X7nRjug"
-                    title="YouTube video player" frameborder="0"
+                    title="Tecnica de Amasado Frances para pizza napoletana" frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                     allowfullscreen></iframe>
 
