--- a/index.html
+++ b/index.html
@@ -86,35 +86,29 @@
 
     </main>
 
-    <section>
+    <section class="animate__animated animate__fadeInUp">
         <div class="container px-4 py-5">
             <h2 class="pb-2 border-bottom text-center">¿Qué Aprenderas?</h2>
             <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
                 <div class="feature col text-center">
-                    <img class="img-fluid p-3" src="imagenes/iconos/fermentacion.png" alt="fermentacion">
-                    <div class="feature-icon bg-primary bg-gradient m-2">
-                        <svg class="separadorInicio" width="1em" height="1em">
-                        </svg>
+                    <img class="img-fluid p-3 iconoPortada" src="imagenes/iconos/fermentacion.png" alt=" icono fermentacion">
+                    <div class="separadorInicio">
                     </div>
                     <h2 class="text-center">Masa con Fermentacion de 72 horas</h2>
                     <p>Aprenderás a realizar un pre-fermento de origen italiano para que tu masa salga fragante, rica y
                         que además sea super digestible para tu estómago.</p>
                 </div>
-                <div class="feature col">
-                    <div class="feature-icon bg-primary bg-gradient">
-                        <svg class="bi" width="1em" height="1em">
-                            <use xlink:href="#people-circle" />
-                        </svg>
+                <div class="feature col text-center">
+                    <img class="img-fluid p-3 iconoPortada" src="imagenes/iconos/amasado.png" alt="icono amasado">
+                    <div class="separadorInicio">
                     </div>
                     <h2 class="text-center">Técnica de Estirado</h2>
                     <p>Uno de los secretos de este estilo de pizza es su correcto estirado y aquí te mostraremos como se
                         realiza correctamente para que esos bordes salgan bien aireados y llenos de sabor.</p>
                 </div>
-                <div class="feature col">
-                    <div class="feature-icon bg-primary bg-gradient">
-                        <svg class="bi" width="1em" height="1em">
-                            <use xlink:href="#toggles2" />
-                        </svg>
+                <div class="feature col text-center">
+                    <img class="img-fluid p-3 iconoPortada" src="imagenes/iconos/margarita.png" alt="icono pizza margarita">
+                    <div class="separadorInicio">
                     </div>
                     <h2 class="text-center">Receta Tradicional</h2>
                     <p>Te enseñaremos a realizar la tradicional receta italiana de la pizza "Margarita" para que
