--- a/pages/recetas.html
+++ b/pages/recetas.html
@@ -80,7 +80,7 @@
                 </p>
 
                 <iframe class="container-fluid" width="360" height="315" src="https://www.youtube.com/embed/pfYpUNziVOQ"
-                    title="YouTube video player" frameborder="0"
+                    title="Tecnica de estirado de masa estilo Napoletano" frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                     allowfullscreen></iframe>
 
